--- a/wiki/StreamNotes.wiki
+++ b/wiki/StreamNotes.wiki
@@ -95,7 +95,6 @@ signal(PING_STREAM_CLEAR)
 status(NS_UNPAUSE_NOTIFY)
 }}}
 
-
 play
 
 {{{
@@ -123,4 +122,6 @@ status(NS_PLAY_START)
 frame(KeyFrame) or frame(BlankAudio)
 }}}
 
+=== Header Type & Channel Ids ===
 
+The header type is encoded in the first 2 bits. See: RTMP_HDR_* in ems.hrl possible for values. The remaining 6 bits of the first byte are used to store the channel id. With a range 0-63. Ids 0 and 1 are reserved to signal higher channels requiring more bytes to store. If 0 then the id is larger than 63 and takes an additional byte ( 64 + extra:8 ). If 1 then the id is larger than 319 and takes an additional byte ( 64 + extra:16 ).
