Edited wiki page through web user interface.

--- a/wiki/configuration.wiki
+++ b/wiki/configuration.wiki
@@ -1,6 +1,6 @@
-#Roberto's notes on configuration settings
+#summary Roberto's notes on configuration settings
 
-== Introduction ==
+= Introduction =
 
 Application configuration based on OTP environment variables
 
