--- a/wiki/StreamNotes.wiki
+++ b/wiki/StreamNotes.wiki
@@ -6,6 +6,10 @@ Notes of different parts of RTMP and streaming. Random order at the moment.
 
 The information contained in this doc is based on my observations and thus assumptions should be tested and challenged. There is still quite a bit of stuff which is unknown or not fully understood.
 
+== Low Level Protocol == 
+
+First part of this document details the low level structure of the RTMP protocol. 
+
 === Handshake === 
 
 TODO: handshake description
@@ -118,19 +122,37 @@ TODO: Improve map packet types to channel ids.
 
 Packets over a configured size (defaults to 128) are split into chunks. Each with its own header. 
 
+=== Unknown (2) ===
+
+This type is unknown. There was once a report of the player was sending this packet, I asked for more info but nothing was forthcoming.  Perhaps we will find out what its for one day. 
+
 === Stream Bytes Read (3) === 
 
 Stream bytes read packets are sent by the client or server when receiving data. When the client is publishing the server must send these packets at regular intervals otherwise the client will close the connection. I think the default for the flash player is to send every 125000 bytes. 
+
+=== Pings (Protocol Signals) Packets (4) === 
+
+Historically we called them pings, since the first one we discovered was like the standard ping. However in addition to this they also signal the stream state and buffer length. Not all the types are known.
 
 === Server (5) & Client (6) Bandwidth === 
 
 There are two types for setting bandwidth for upstream and downstream. 
 
-=== Pings (Protocol Signals) Packets === 
+=== Audio (8) & Video (9) Frames ===
 
-Historically we called them pings, since the first one we discovered was like the standard ping. However in addition to this they also signal the stream state and buffer length. Not all the types are known.
+Audio and Video frames are sent with timestamps down channels 4 and above. Encoded in the body of the packet is the raw frame (flv tag) data. The frame contains its own header which tells us what kind of audio of video frame it is. Certain types of frames can be dropped to compensate for slow network connections. 
 
-=== Notify (18) === 
+TODO: more info on frame types
+
+=== Unknown (10-14) ===
+
+These types are unknown. 
+
+=== Flex Types (15-17) ===
+
+These types are reserved for Flex usage. Not needed for our implementation.
+
+=== Notify / MetaData (18) === 
 
 Notify is used for calls which do need or expect a reply. This makes it useful for sending events to the client.
 
@@ -144,11 +166,21 @@ _Meta Data_
 
 Stream metadata is sent down the data channel of the stream to the onMetaData method.
 
+=== Shared Object (19) ===
+
+Shared objects are used to connect multiple clients to the same object. Any updates made to the properties of the object are sent to all the clients. Also there is a facility to send method calls to all the listening clients. Shared objects have many applications: Chat rooms, multiplayer games, real time data displays, etc.
+
+TODO: List shared object event types.
+
 === Invoke (20) === 
 
 Invoke is used for calls which expect a response. 
 
 TODO: describe invoke, args, result handler, etc.
+
+== Higher Level Protocol == 
+
+Now we have covered the low level protocol we can move onto the higher level commands and sequence of events. 
 
 === App Commands === 
 
@@ -251,7 +283,13 @@ frame(KeyFrame) or frame(BlankAudio)
 }}}
 
 
+== Architecture Discussion ==
 
+=== Push VS Pull ===
+
+=== Provider -> Subscriber ===
+
+=== FLV Indexing ===
 
 
 
