Edited wiki page through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -18,6 +18,11 @@ Old - after play request:
 ...
 ...
 00000DB6  00 00 00 09                                      ...
+00000DBA  06 00 00 00 00 13 9a 12  01 00 00 00 02 00 0a 6f ........ .......o
+00000DCA  6e 4d 65 74 61 44 61 74  61 08 00 00 00 17 00 08 nMetaDat a.......
+00000DDA  64 75 72 61 74 69 6f 6e  00 40 63 02 b0 20 c4 9b duration .@c.. ..
+...
+...
 
 
 Current - after play request:
@@ -25,5 +30,10 @@ Current - after play request:
 00000CA9  04 00 00 7b 00 00 91 14  01 00 00 00 02 00 08 6f ...{.... .......o
 00000CB9  6e 53 74 61 74 75 73 00  00 00 00 00 00 00 00 00 nStatus. ........
 ...
-00000DD7  00 00 00 00 00 00 00 09                          ........ 
+00000DD7  00 00 00 00 00 00 00 09                          ........
+00000DDF  04 00 00 00 00 13 9a 12  00 00 00 00 02 00 0a 6f ........ .......o
+00000DEF  6e 4d 65 74 61 44 61 74  61 08 00 00 00 17 00 08 nMetaDat a.......
+00000DFF  64 75 72 61 74 69 6f 6e  00 40 63 02 b0 20 c4 9b duration .@c.. .. 
 }}}
+
+Differences: ChannelIds
