Added note about binary copies.

--- a/wiki/DesignIdeas.wiki
+++ b/wiki/DesignIdeas.wiki
@@ -14,7 +14,9 @@ Another one of my rather messy design idea documents. This time I have spent qui
 
 === Binary Efficiency ===
 
-Efficient use of binaries is critical to the performance of the server. Erlang does not create a new binary for every variable pointing to it, instead it creates a reference and increments a counter. The binary data is stored on a separate heap. Thus there should only need to be one copy of each binary per node. This means providing we don't chop up the binary we can pass it efficiently around the node. The binary will be garbage collected when there are no more references to it. Of course when it comes to passing the binary between processes on different nodes the binary must be sent over the wire. I'm assuming that if you send the same binary in separate messages between nodes that is passed each time. This assumption should be tested, since if its not the case then the design may change. For the sake of this design I assume its efficient to minimize the number of times a binary is passed between nodes. Reading from memory on the local node should always be the preferred route. 
+Efficient use of binaries is critical to the performance of the server. Erlang does not create a new binary for every variable pointing to it, instead it creates a reference and increments a counter. The binary data is stored on a separate heap. Thus there should only need to be one copy of each binary per node. This means providing we don't chop up the binary we can pass it efficiently around the node. The binary will be garbage collected when there are no more references to it. Of course when it comes to passing the binary between processes on different nodes the binary must be sent over the wire. I'm assuming that if you send the same binary in separate messages between nodes that is passed each time. This assumption should be tested*, since if its not the case then the design may change. For the sake of this design I assume its efficient to minimize the number of times a binary is passed between nodes. Reading from memory on the local node should always be the preferred route. 
+
+* Have checked with the erlang list, and the binary will be copied for each message. So it is important to take this into account with our design.
 
 === Stream FSM ===
 
