--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -5,12 +5,20 @@
 This ia a quick and dirty ToDo list.
 
 
-= Details =
+== Overview ==
 
 Main Points
-  * FLV Playback
-  * FLV Recording
-  * Live Streams
+ * FLV Playback
+ * FLV Recording
+ * Live Streams
 
 lesser issues
-  * Add specific folder support into gen_rtmp applications for playing and recording
+ * Add specific folder support into gen_rtmp applications for playing and recording
+
+== Details ==
+
+=== Roberto's items ===
+ * make the per-connection id creation work
+ * major main-FMS refactoring, now it is just a mess of code
+ * add distributed media broker (getting media from Cache, filesystem, network filesystem, S3, etc ..
+ * fix audio recording 
