--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -17,7 +17,7 @@ lesser issues
 
 == Details ==
 
-=== Roberto's items ===
+=== Roberto's current items ===
  * make the per-connection id creation work
  * major main-FMS refactoring, now it is just a mess of code
  * add distributed media broker (getting media from Cache, filesystem, network filesystem, S3, etc ..
