--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -19,7 +19,9 @@ lesser issues
 
 === Roberto's current items ===
  * *URGENT:* make the per-connection id creation work 
- * make this warning go away: src/ems_demo.erl:38: Warning: behaviour gen_rtmp undefined
  * major main-FMS refactoring, now it is just a mess of code
  * add distributed media broker (getting media from Cache, filesystem, network filesystem, S3, etc ..
- * fix audio recording 
+ * fix audio recording
+
+cosmetics:
+ * make this warning go away: src/ems_demo.erl:38: Warning: behaviour gen_rtmp undefined (two step compilation or just surpressing it in Emakefile) 
