--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -1,3 +1,4 @@
+
 #summary To Do list for erlyVideo / Erlang Media Server
 
 = Introduction =
@@ -19,9 +20,11 @@ lesser issues
 
 === Roberto's current items ===
  * *URGENT:* make the per-connection id creation work 
+ * fix audio recording
+ * fix live streaming
  * major main-FMS refactoring, now it is just a mess of code
  * add distributed media broker (getting media from Cache, filesystem, network filesystem, S3, etc ..
- * fix audio recording
+ * replace mnesia hack with Stuarts well thought approach
 
 cosmetics:
  * make this warning go away: src/ems_demo.erl:38: Warning: behaviour gen_rtmp undefined (two step compilation or just surpressing it in Emakefile) 
