--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -21,6 +21,7 @@ lesser issues
  * *URGENT:* make the per-connection id creation work 
  * fix audio recording
  * fix live streaming
+ * use relative timestamp (needs rewrite of channel creation code)
  * major main-FSM refactoring, now it is just a mess of code
  * add distributed media broker (getting media from Cache, filesystem, network filesystem, S3, etc ..
  * replace mnesia hack with Stuarts well thought approach
